# gws-wrapper

./: Dockerfile  GEMINI.md  IMPLEMENTATION_DETAILS.md  README.md  pyproject.toml  settings.toml
docs/superpowers/plans/: 2026-04-18-api-integration.md
docs/superpowers/specs/: 2026-04-18-api-integration-design.md
src/gws_wrapper/: main.py
src/gws_wrapper/adapters/: calendar.py  cli.py  drive.py  gmail.py
src/gws_wrapper/api/: main.py
src/gws_wrapper/api/routes/: calendar.py  drive.py  mail.py
src/gws_wrapper/cli/: calendar.py  drive.py  mail.py
src/gws_wrapper/models/: api.py  calendar.py  drive.py  gmail.py
tests/: test_adapters_calendar.py  test_adapters_cli.py  test_adapters_drive.py  test_adapters_gmail.py  test_api_calendar.py  test_api_drive.py  test_api_mail.py
